Added Css on index.html

--- a/todo/index.html
+++ b/todo/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/Index.css" />
   </head>
 
-  <body>
+  <body class="container">
     <header>
       <div id="Logo">
         <img src="imgs/Logo1.png" alt="Logo" />
@@ -64,7 +64,7 @@
               Info@Todo.com</p>
         </p>Follow us on :</p>
         </div>
-        <div >
+        <div class="logo2">
           <img id="logo2" src="imgs/Logo1.png" alt="Logo" />
         </div>
     </div>
