--- a/todo/index.html
+++ b/todo/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body class="container">
+    <script src="js/app.js"></script>
     <header>
       <div id="Logo">
         <img src="imgs/Logo1.png" alt="Logo" />
@@ -48,7 +49,7 @@
           </tr>
           <tr>
             <td>Fly</td>
-            <td><input type="checkbox"  /></td>
+            <td><input type="checkbox"  id="myCheck"/></td>
           </tr>
         </table>
       </div>
